[tool.poetry]
name = "jimi-all"
version = "0.1.0"
description = "For debugging and local dev environment"
authors = ["jon <jon@m87.co>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.2"
requests = "^2.25.1"
netaddr = "^0.8.0"
pymongo = "^3.11.3"
pycryptodome = "^3.10.1"
PyJWT = "^2.1.0"
croniter = "^1.0.12"
pyreadline = "^2.1"
cryptography = "^3.4.7"
onetimepass = "^1.0.1"
json2html = "^1.3.0"
numpy = "^1.20.2"
matplotlib = "^3.4.1"
sklearn = "^0.0"
paramiko = "^2.7.2"
pywinrm = "^0.4.1"
smbprotocol = "^1.5.0"
scp = "^0.13.3"
sshtunnel = "^0.4.0"
pythonping = "^1.0.16"
pybatfish = "^2021.4.12"

[tool.poetry.dev-dependencies]
darglint = "^1.8.0"
mypy = "^0.812"
nox = "^2020.12.31"
pycodestyle = "^2.7.0"
pydocstyle = "^6.0.0"
pylint = "^2.8.2"
pytest-cov = "^2.11.1"
pytest = "^6.2.4"
black = "^21.5b1"
GitPython = "^3.1.15"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '(\.eggs|\.git|\.hg|\.mypy_cache|\.nox|\.tox|\.venv|_build|buck-out|build|dist|.*\/models\.py.*|.*\/models\/.*|\batfish.py)'